--- a/EcoApp/Info.plist
+++ b/EcoApp/Info.plist
@@ -76,6 +76,8 @@
 	</array>
 	<key>NSAppTransportSecurity</key>
 	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>ecobalance.life</key>
